--- a/work-R/Dockerfile
+++ b/work-R/Dockerfile
@@ -12,8 +12,10 @@ USER root
 RUN apt-get update && \
     apt-get install -y libxrender1 fonts-dejavu gfortran gcc mesa-common-dev libglu1-mesa-dev libgl1-mesa-dev && \
     apt-get install -y software-properties-common && \
-    add-apt-repository -y ppa:neovim-ppa/unstable && \
-    apt-get update && \
+    apt-get clean
+
+# neovim install
+RUN apt-get update && \
     apt-get install -y neovim zsh curl && \
     apt-get clean
 
