--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
     git \
     zsh \
     vim \
+	curl \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
