--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -55,7 +55,7 @@ WORKDIR /home/$NB_USER/.spf13-vim-3
 RUN git remote add personal https://github.com/diogro/spf13-vim.git
 RUN git pull personal local:local && git checkout local && vim +BundleInstall +BundleClean +q +q
 WORKDIR /home/$NB_USER/
-RUN mkdir .config/neovim/
+RUN mkdir .config/ && mkdir .config/neovim
 WORKDIR /home/$NB_USER/.spf13-vim-3
 RUN make
 
