--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
     zsh \
     vim \
 	curl \
+	software-properties-common \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -33,7 +34,6 @@ RUN wget https://mran.revolutionanalytics.com/install/mro/3.2.5/MRO-3.2.5-Ubuntu
 
 # Neovim
 
-RUN apt-get install software-properties-common
 RUN add-apt-repository ppa:neovim-ppa/unstable && \
 	apt-get update && apt-get install -yq neovim && \
 	apt-get install -yq python-dev python-pip python3-dev python3-pip && \
