install vim bundles

--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -65,11 +65,12 @@ RUN curl https://j.mp/spf13-vim3 -L > spf13-vim.sh && sh spf13-vim.sh
 RUN sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 WORKDIR /home/$NB_USER/.spf13-vim-3
 RUN git remote add personal https://github.com/diogro/spf13-vim.git
-RUN git pull personal local:local && git checkout local && vim +BundleInstall +BundleClean +q +q
+RUN git pull personal local:local && git checkout local
 WORKDIR /home/$NB_USER/
 RUN mkdir .config/ && mkdir .config/nvim
 WORKDIR /home/$NB_USER/.spf13-vim-3
 RUN make
+RUN vim +BundleInstall +BundleClean +q +q
 
 USER root
 
