--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
 RUN apt-get update && apt-get install -yq --no-install-recommends \
     libcairo2 libgfortran3 libglib2.0-0 libjpeg8 libpango-1.0-0 libpangocairo-1.0-0 \
     libtcl8.6 libtiff5 libtk8.6 libx11-6 libxt6 gfortran fonts-dejavu libblas-dev liblapack-dev\
-	libx11-dev mesa-common-dev libglu1-mesa-dev \
+	libx11-dev mesa-common-dev libglu1-mesa-dev libcurl4-openssl-dev openssl \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
