--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -97,6 +97,7 @@ RUN R -e 'install.packages("phytools", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("mvtnorm", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("coda", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("MCMCpack", repos="http://cran.us.r-project.org")'
+RUN R -e 'install.packages("rgl", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("geomorph", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("install.load", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("readr", repos="http://cran.us.r-project.org")'
