--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -5,18 +5,31 @@ FROM krallin/ubuntu-tini:trusty
 
 MAINTAINER Diogo Melo <diogro@gmail.com>
 
-# Basic stuff
+# Install all OS dependencies for fully functional notebook server
 RUN apt-get update && apt-get install -yq --no-install-recommends \
+    git \
+    vim \
+    jed \
+    emacs \
+    build-essential \
+    python-dev \
+    unzip \
+    libsm6 \
+    pandoc \
     wget \
     bzip2 \
     ca-certificates \
     sudo \
     locales \
-    git \
     zsh \
-    vim \
 	curl \
 	software-properties-common \
+    texlive-latex-base \
+    texlive-latex-extra \
+    texlive-fonts-extra \
+    texlive-fonts-recommended \
+    texlive-generic-recommended \
+    libxrender1 \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -25,15 +38,10 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
     libcairo2 libgfortran3 libglib2.0-0 libjpeg8 libpango-1.0-0 libpangocairo-1.0-0 \
     libtcl8.6 libtiff5 libtk8.6 libx11-6 libxt6 gfortran fonts-dejavu libblas-dev liblapack-dev\
 	libx11-dev mesa-common-dev libglu1-mesa-dev libcurl4-openssl-dev openssl \
+	libx11-dev libgl1-mesa-dev libglu1-mesa-dev \
+	libpaper-utils libpaper1 libtcl8.5 libtk8.5 tcl8.5 tk8.5 unzip xdg-utils zip ed \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-
-RUN wget https://mran.revolutionanalytics.com/install/mro/3.2.5/MRO-3.2.5-Ubuntu-14.4.x86_64.deb && \
-    echo "f73378c5942621f8f49f7c28ce107608bfe71f808ba5bf58379437b2963b6894 MRO-3.2.5-Ubuntu-14.4.x86_64.deb" | sha256sum -c - && \
-    dpkg -i MRO-3.2.5-Ubuntu-14.4.x86_64.deb && \
-    rm MRO-3.2.5-Ubuntu-14.4.x86_64.deb
-
-
 
 # Neovim
 RUN add-apt-repository ppa:neovim-ppa/unstable && \
@@ -47,6 +55,8 @@ RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
     locale-gen
 
 # Configure environment
+ENV CONDA_DIR /opt/conda
+ENV PATH $CONDA_DIR/bin:$PATH
 ENV SHELL /bin/zsh
 ENV NB_USER diogro
 ENV NB_UID 1000
@@ -56,12 +66,29 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 
 # Create diogro user with UID=1000 and in the 'users' group
-RUN useradd -m -s /bin/bash -N -u $NB_UID $NB_USER 
+RUN useradd -m -s /bin/bash -N -u $NB_UID $NB_USER && \
+    mkdir -p /opt/conda && \
+    chown diogro /opt/conda
 
 USER diogro
 
 # Setup diogro home directory
-RUN mkdir /home/$NB_USER/projects
+RUN mkdir /home/$NB_USER/projects && \
+    mkdir /home/$NB_USER/.jupyter && \
+    mkdir -p -m 700 /home/$NB_USER/.local/share/jupyter && \
+    echo "cacert=/etc/ssl/certs/ca-certificates.crt" > /home/$NB_USER/.curlrc
+
+# Install conda as diogro
+RUN cd /tmp && \
+    mkdir -p $CONDA_DIR && \
+    wget --quiet https://repo.continuum.io/miniconda/Miniconda3-3.19.0-Linux-x86_64.sh && \
+    echo "9ea57c0fdf481acf89d816184f969b04bc44dea27b258c4e86b1e3a25ff26aa0 *Miniconda3-3.19.0-Linux-x86_64.sh" | sha256sum -c - && \
+    /bin/bash Miniconda3-3.19.0-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
+    rm Miniconda3-3.19.0-Linux-x86_64.sh && \
+    $CONDA_DIR/bin/conda install --quiet --yes conda==3.19.1 && \
+    $CONDA_DIR/bin/conda config --system --add channels conda-forge && \
+    conda clean -tipsy
+
 WORKDIR /home/$NB_USER
 RUN curl https://j.mp/spf13-vim3 -L > spf13-vim.sh && sh spf13-vim.sh
 RUN sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
@@ -76,13 +103,35 @@ RUN vim +BundleInstall +q +q
 
 USER root
 
+# R pre-requisites
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    fonts-dejavu \
+    gfortran \
+    gcc && apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+USER diogro
+
+# R packages
+RUN conda config --add channels mro && \
+    conda install --quiet --yes \
+    'r-base=3.2*' \
+    'r-plyr=1.8*' \
+    'r-devtools=1.9*' \
+    'r-dplyr=0.4*' \
+    'r-ggplot2=1.0*' \
+    'r-tidyr=0.3*' \
+    'r-rmarkdown=0.8*' \
+    'r-stringr=0.6*' \
+    'r-reshape2=1.4*' \
+    'r-rcurl=1.95*' \
+    'r-rgl' && conda clean -tipsy
+
 # R packages
 # Install MCMCglmm
 RUN R -e 'install.packages("ape", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("MCMCglmm", repos="http://cran.us.r-project.org")'
-RUN R -e 'install.packages("httr", repos="http://cran.us.r-project.org")'
-RUN R -e 'install.packages("git2r", repos="http://cran.us.r-project.org")'
-RUN R -e 'install.packages("devtools", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("doMC", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("testthat", repos="http://cran.us.r-project.org")'
 
@@ -100,8 +149,6 @@ RUN R -e 'install.packages("MCMCpack", repos="http://cran.us.r-project.org")'
 
 # rgl dependencies
 RUN apt-get update && apt-get install -yq --no-install-recommends \
-	libx11-dev libgl1-mesa-dev libglu1-mesa-dev \
-	libpaper-utils libpaper1 libtcl8.5 libtk8.5 tcl8.5 tk8.5 unzip xdg-utils zip \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -112,7 +159,6 @@ RUN R -e 'install.packages("lme4", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("cowplot", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("readr", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("tidyr", repos="http://cran.us.r-project.org")'
-RUN R -e 'install.packages("dplyr", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("evolqg", repos="http://cran.us.r-project.org")'
 
 
