--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -116,7 +116,7 @@ USER diogro
 # R packages
 RUN conda config --add channels mro && \
     conda install -c mro --quiet --yes \
-    'r-base=3.2*' \
+    'r-base' \
     'r-plyr=1.8*' \
     'r-devtools=1.9*' \
     'r-dplyr=0.4*' \
