--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -140,8 +140,8 @@ RUN conda install --yes \
 
 # R packages
 # Install MCMCglmm
-RUN ["/bin/zsh", "-c", "source activate root"]
-RUN ["/bin/zsh", "-c", "R -e 'install.packages(\"MCMCglmm\", repos=\"http://cran.us.r-project.org\")'"]
+RUN ["/bin/zsh", "-c", "source activate root && R -e 'install.packages(\"MCMCglmm\", repos=\"http://cran.us.r-project.org\")'"]
+#RUN ["/bin/zsh", "-c", "R -e 'install.packages(\"MCMCglmm\", repos=\"http://cran.us.r-project.org\")'"]
 
 # Install phytools dependencies
 RUN ["/bin/zsh", "-c", "R -e 'source("http://bioconductor.org/biocLite.R"); biocLite(c("Biostrings"))'"]
