--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -142,7 +142,7 @@ RUN R -e 'install.packages("evolqg", repos="http://cran.us.r-project.org")'
 USER diogro
 
 WORKDIR /home/$NB_USER/.oh-my-zsh
-RUN git remote add personal https://github.com/diogro/spf13-vim.git
+RUN git remote add personal https://github.com/diogro/oh-my-zsh.git
 RUN git pull personal local:local && git checkout local
 
 USER root
