--- a/basic-ubuntu/Dockerfile
+++ b/basic-ubuntu/Dockerfile
@@ -141,6 +141,10 @@ RUN R -e 'install.packages("evolqg", repos="http://cran.us.r-project.org")'
 
 USER diogro
 
+
+RUN git config --global user.email "diogro@gmail.com"
+RUN git config --global user.name "Diogo Melo"
+
 WORKDIR /home/$NB_USER/.oh-my-zsh
 RUN git remote add personal https://github.com/diogro/oh-my-zsh.git
 RUN git pull personal local:local && git checkout local
