--- a/work-R/Dockerfile
+++ b/work-R/Dockerfile
@@ -19,3 +19,4 @@ RUN R -e 'install.packages("readr", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("lme4", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("cowplot", repos="http://cran.us.r-project.org")'
 RUN R -e 'install.packages("evolqg", repos="http://cran.us.r-project.org")'
+RUN R -e 'install.packages("GGally", repos="http://cran.us.r-project.org")'
